style.css
@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Maven Pro', sans-serif;
}

:root {
  --color-1: #191f33;
  --color-2: #B85C38;
  --color-3: #8ba79c;
  --color-4: #f8642a;
  --color-5: rgb(241, 241, 241);
}

@media screen and (max-width: 1200px) {
  .sb-container {
    display: none;
  }

  header, .content {
    grid-column: 1 / 3 !important;
    flex: 1;
  }

  .preview-img {
    height: 7rem !important;
  }

  input {
    width: 360px;
  }

  .projects .card {
    min-width: 36px !important;
  }
  
  .right-bar .card {
    min-width: 30px !important;
  }
}

@media screen and (max-width: 600px) {

  input {
    width: 96px !important;
  }

  .card .icon {
    width: 16px !important;
    height: 16px !important;
  }

  .preview-img {
    height: 10rem !important;
  }

  .card-container {
    grid-template-columns: 1fr !important;
  }

  .right-bar {
    display: none !important;
  }

  .projects {
    grid-column: 1 / 3;
  }

  .actions {
    display: none !important;
  }
}

body {
  height: 100vh;
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: 1fr 4fr;
  background-color: var(--color-3);
}

/* ----------------- SIDEBAR ----------------- */

.sb-container {
  color: white;
  background-color: var(--color-4);
  grid-row: 1 / 7;
  padding: 0px 16px;
  border-radius: 0 0 15px 0;
  box-shadow: 1px 0px 5px black;
}

.sb-container a, header a {
  color: rgb(226, 226, 226);
  text-decoration: none;
}

.sidebar {
  display: flex;
  flex-direction: column;
  gap: 56px;
}

.sidebar h1 {
  display: inline;
  margin-left: 8px;
}

.sb-header {
  display: flex;
  align-items: center;
}

.sb-header img {
  position: relative;
  top: 3px;
}

ul {
  list-style-type: none;
  font-size: 24px;
}

li {
  padding: 8px;
  display: flex;
  align-items: center;
  margin-bottom: 12px;
  border-radius: 0px 15px 15px 0px;
  gap: 12px;
}

li:hover {
  font-size: 25px;
  cursor: pointer;
  background-color: #b3481e;
  transition: 0.3s;
}

nav {
  display: flex;
  justify-content: space-between;
}

.sb-footer {
  background-color: #b3481e;
  border-radius: 15px;
  padding: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
}
/* ----------------- HEADER ----------------- */

header {
  color: white;
  padding: 20px 40px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: var(--color-1);
  grid-column: 2 / 6;
  box-shadow: 2px 2px 3px gray;
}

.search {
  display: flex;
  align-items: center;
  gap: 10px;
}

input {
  background-color: #9492a3;
  width: 500px;
  height: 1.8rem;
  border: none;
  border-radius: 15px;
  padding-left: 8px;
}

input:focus {
  outline: none;
  box-shadow: 0px 0px 4px #c7d1ff;
  transition: 0.3s;
}

.user-quickbar {
  display: flex;
  align-items: center;
  gap: 10px;
}

.user-quickbar #avatar {
  height: 40px;
  width: 40px;
  background-color: rgb(128, 161, 161);
  border-radius: 100%;
}

.lower-nav {
  display: flex;
  justify-content: space-between;
}

.lower-nav #big-avatar {
  height: 64px;
  width: 64px;
  background-color: rgb(128, 161, 161);
  border-radius: 100%;
}

.bio {
  display: flex;
  align-items: center;
  gap: 16px;
}

.bio-text a:hover {
  color: var(--color-4);
  transition: 0.35s;
}

.actions {
  display: flex;
  align-items: center;
  gap: 36px;
}

button {
  color: white;
  background-color: var(--color-4);
  font-size: 16px;
  border: none;
  padding: 8px 24px;
  border-radius: 32px;
}

button:hover {
  background-color: #ff7944;
  cursor: pointer;
  box-shadow: 0px 0px 5px #ff7944;
  transition: 0.2s;
}

nav h2 {
  display: inline;
}

.icon {
  height: 30px;
  width: 30px;
}

/* ----------------- CONTENT SECTION ----------------- */

.content {
  background-color: var(--color-3);
  display: grid;
  grid-template-columns: 5fr 2fr;
  grid-row: 2 / 6;
}

.projects {
  background-color: var(--color-3);
  padding: 12px;
}

.card-container {
  margin-top: 12px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 1fr);
  gap: 16px;
  height: 92.5%;
}

.card {
  font-size: 14px;
  background-color: var(--color-5);
  padding: 12px;
  border-radius: 8px;
  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
}

.card a {
  color: black;
  text-decoration: none;
  display: flex;
  justify-content: center;
}

.card p {
  color: #2f363f;
  font-size: 16px;
  margin: 12px 0;
}

.card:hover {
  cursor: pointer;
  background: rgb(255, 255, 255);
  box-shadow: 1px 1px 5px #202020;
  transition: 0.5s;
}

.card:hover h2 {
  color: var(--color-4);
  transition: 0.3s;
}

.preview-img {
  margin-top: 8px;
  border: 1px solid rgba(0, 0, 0, 0);
  transition: 0.2s;
  height: 12rem;
}

.preview-img:hover {
  border: 1px solid var(--color-4);
}

.card .icon {
  padding: 8px;
  float: right;
}

.card .icon:hover {
  cursor: pointer;
  border-radius: 100%;
  background-color: rgb(231, 231, 231);
  transition: 0.3s;
}

.projects .card {
  min-width: 360px;
}

.right-bar .card {
  min-width: 300px;
}

/* ----------------- RIGHT SIDEBAR ----------------- */

.right-bar {
  padding: 8px 12px;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.announcements .card {
  margin-top: 8px;
}

.announcements h3 {
  margin-top: 8px;
}

hr {
  border: 1px solid rgb(224, 224, 224);
}

.trending-card #avatar {
  background-color: #fff;
  height: 48px;
  width: 48px;
  border-radius: 100%;
}

.trending-card {
  padding: 12px;
  display: flex;
  justify-content: center;
  font-size: 14px;
  background-color: var(--color-5);
  padding: 12px;
  border-radius: 8px;
  margin-top: 5px;
  box-shadow: 2px 2px 3px rgb(187, 187, 187);
}

.users-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 24px;
}

.trending-user {
  display: flex;
  align-items: center;
  gap: 12px;
}

.trending-user a {
  color: black;
}

.trending-info #quote {
  color: #2f363f;
}

